--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano
-    shield: sofle_left
+    shield: sofle_left nice_view
   - board: nice_nano
     shield: sofle_right
