--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -15,3 +15,5 @@
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
