feat: Add NICE_VIEW_WIDGET_STATUS and disable display blank on idle.

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -5,6 +5,8 @@
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_NICE_VIEW_WIDGET_STATUS=y
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
 # Uncomment these two lines to add support for encoders
 # CONFIG_EC11=y
