feat: Enable Bluetooth Battery Service and experimental BLE features

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -12,6 +12,12 @@ CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
+# Explicitly enable Battery Service
+CONFIG_BT_BAS=y
+
+# Experimental BLE features for better discovery/stability
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
 # Uncomment these two lines to add support for encoders
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
