feat: Add sofle_dongle shield with central role configuration and update build artifacts for peripheral halves.

--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,15 @@
 ---
 include:
   - board: nice_nano
+    shield: sofle_dongle
+    artifact-name: sofle_dongle
+  - board: nice_nano
     shield: sofle_left
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: sofle_left_peripheral
   - board: nice_nano
     shield: sofle_right
+    # sofle_right is peripheral by default, but it's good to be explicit
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: sofle_right_peripheral
+
