feat: Enable display widgets and split BLE central peripherals for sofle dongle, and add its keymap.

--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -3,10 +3,16 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # Dongle OLED Display
 CONFIG_ZMK_DISPLAY=y
-# Display battery status for both halves
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
+# Support for 2 peripherals (left/right halves)
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 # Central side of battery reporting
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
