--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -3,16 +3,26 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # Dongle OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_EXT_POWER_DEFAULT_SET=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
-# Support for 2 peripherals (left/right halves)
+# Bluetooth Central stability
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_BT_MAX_CONN=3
+CONFIG_BT_MAX_PAIRED=3
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
-# Central side of battery reporting
+
+# Battery reporting
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# Debug logging (Access via serial monitor)
+CONFIG_ZMK_USB_LOGGING=y
+
 
