feat: remove `CONFIG_ZMK_EXT_POWER_DEFAULT_SET` and temporarily disable `CONFIG_ZMK_USB_LOGGING` due to Kconfig dependency issues

--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -4,7 +4,6 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 # Dongle OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_EXT_POWER=y
-CONFIG_ZMK_EXT_POWER_DEFAULT_SET=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
@@ -22,7 +21,8 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
-# Debug logging (Access via serial monitor)
-CONFIG_ZMK_USB_LOGGING=y
+# Debug logging (Temporarily disabled due to Kconfig dependency issues)
+# CONFIG_ZMK_USB_LOGGING=y
+
 
 
