--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -4,6 +4,9 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 # Dongle OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILTIN=y
+
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
@@ -14,7 +17,9 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_BT_MAX_CONN=3
 CONFIG_BT_MAX_PAIRED=3
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+
 
 
 # Battery reporting
