--- a/build.yaml
+++ b/build.yaml
@@ -24,12 +24,13 @@ include:
     artifact-name: sofle_dongle
   - board: nice_nano
     shield: sofle_left
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
     artifact-name: sofle_left_peripheral
   - board: nice_nano
     shield: sofle_right
     # sofle_right is peripheral by default, but it's good to be explicit
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
     artifact-name: sofle_right_peripheral
   - board: nice_nano
     shield: settings_reset
