feat: enable EC11 and change encoder binding from volume to brightness control

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -16,8 +16,8 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_BT_BAS=y
 
 # Uncomment these two lines to add support for encoders
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment this line below to add rgb underglow / backlight support
 # CONFIG_ZMK_RGB_UNDERGLOW=y
