feat: Enable full 128x64 OLED display, I2C, and USB logging for Sofle dongle.

--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -1,5 +1,7 @@
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_I2C=y
+
 
 # Dongle OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -27,8 +29,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
-# Debug logging (Temporarily disabled due to Kconfig dependency issues)
-# CONFIG_ZMK_USB_LOGGING=y
+
 
 
 
