--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,9 @@
 include:
   - board: nice_nano
     shield: sofle_dongle
+    snippet: zmk-usb-logging
     artifact-name: sofle_dongle
+
   - board: nice_nano
     shield: sofle_left
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
