--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,7 @@
 ---
 include:
   - board: nice_nano
-    shield: sofle_dongle
+    shield: sofle_dongle dongle_display
     snippet: zmk-usb-logging
     artifact-name: sofle_dongle
 
