--- a/config/west.yml
+++ b/config/west.yml
@@ -6,9 +6,15 @@ manifest:
       url-base: https://github.com/zmkfirmware
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: englmaxi
+      url-base: https://github.com/englmaxi
   projects:
     - name: zmk
       remote: zmkfirmware
       import: app/west.yml
+      # ADDED:
+    - name: zmk-dongle-display
+      remote: englmaxi
+      revision: main
   self:
     path: config
