--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -5,6 +5,9 @@ CONFIG_I2C=y
 
 # Dongle OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_SSD1306=y
+CONFIG_I2C=y
+CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
