--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -8,7 +8,8 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_SSD1306=y
 CONFIG_I2C=y
 CONFIG_ZMK_EXT_POWER=y
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+# CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED is not set
 
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
