--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -9,7 +9,9 @@ CONFIG_SSD1306=y
 CONFIG_I2C=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-# CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED is not set
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=300
 
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
