feat: integrate zmk-dongle-display module and update sofle_dongle shield for OLED display configuration.

--- a/config/west.yml
+++ b/config/west.yml
@@ -12,5 +12,9 @@ manifest:
     - name: zmk
       remote: zmkfirmware
       import: app/west.yml
+      # ADDED:
+    - name: zmk-dongle-display
+      remote: englmaxi
+      revision: main
   self:
     path: config
