feat: Enable ZMK display for Sofle keyboard.

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following line to enable the Sofle OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # Enable battery reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
