--- a/build.yaml
+++ b/build.yaml
@@ -26,7 +26,7 @@ include:
 
   - board: nice_nano
     shield: sofle_left
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y -DCONFIG_ZMK_DISPLAY=y
     artifact-name: sofle_left_peripheral
   - board: nice_nano
     shield: sofle_right
