--- a/build.yaml
+++ b/build.yaml
@@ -21,17 +21,17 @@
 include:
   - board: nice_nano
     shield: sofle_dongle
-    snippet: zmk-usb-logging
+    snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: sofle_dongle
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
 
   - board: nice_nano
     shield: sofle_left
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y -DCONFIG_ZMK_DISPLAY=y
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
     artifact-name: sofle_left_peripheral
   - board: nice_nano
     shield: sofle_right
-    # sofle_right is peripheral by default, but it's good to be explicit
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
     artifact-name: sofle_right_peripheral
   - board: nice_nano
