chore: remove ZMK Studio configuration for sofle_dongle

--- a/build.yaml
+++ b/build.yaml
@@ -21,9 +21,8 @@
 include:
   - board: nice_nano
     shield: sofle_dongle
-    snippet: zmk-usb-logging studio-rpc-usb-uart
+    snippet: zmk-usb-logging
     artifact-name: sofle_dongle
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
 
   - board: nice_nano
     shield: sofle_left
