feat: add encoder support for Sofle dongle

--- a/boards/shields/sofle_dongle/sofle_dongle.conf
+++ b/boards/shields/sofle_dongle/sofle_dongle.conf
@@ -12,3 +12,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 # Battery reporting
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# Encoder support
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
