perf: Disable two `nice_nano` build configurations to improve build speed.

--- a/build.yaml
+++ b/build.yaml
@@ -24,13 +24,14 @@ include:
     snippet: zmk-usb-logging
     artifact-name: sofle_dongle
 
-  - board: nice_nano
-    shield: sofle_left
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    artifact-name: sofle_left_peripheral
-  - board: nice_nano
-    shield: sofle_right
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  # disabled to improve build speed 
+  # - board: nice_nano
+  #   shield: sofle_left
+  #   cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  #   artifact-name: sofle_left_peripheral
+  # - board: nice_nano
+  #   shield: sofle_right
+  #   cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
     artifact-name: sofle_right_peripheral
   - board: nice_nano
