--- a/build.yaml
+++ b/build.yaml
@@ -26,7 +26,7 @@ include:
 
   # disabled to improve build speed 
   - board: nice_nano
-    shield: sofle_left
+    shield: sofle_left nice_view
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
     artifact-name: sofle_left_peripheral
   - board: nice_nano
